fix issues jumping tabs

--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -10,11 +10,6 @@
     margin-left: 20%;
 }
 
-.seller-tutorial_menu #tab1:target {
-    box-shadow: inset 0 3px 0 0 #1cbed2;
-    border-top: 1px solid #1cbed2;
-}
-
 .seller-tutorial_menu > a:nth-of-type(2),
 .seller-tutorial_menu > a:nth-of-type(3) {
     margin-left: -5px;
@@ -23,7 +18,6 @@
 .seller-tutorial_menu > div {
     padding: 5px;
     border: none;
-    margin-top: 65px;
 }
 
 .seller-tutorial_link {
@@ -70,6 +64,7 @@
 
 .seller-tutorial_line {
     margin-top: 16px;
+    margin-bottom: 65px;
     border: 0;
     border-top: 1px solid #aaa;
 }
@@ -85,6 +80,12 @@
 .seller-tutorial_block3 {
     float: left;
     width: 100%;
+    margin-top: 30px;
+}
+
+#tab1 {
+    margin: 0;
+    border-width: 0;
 }
 
 .seller-tutorial_blockleft {
